Bugfix: Render tooltips in front of custom navigation - remove z-index; Fix #49

--- a/scss/legend.scss
+++ b/scss/legend.scss
@@ -138,7 +138,6 @@ circular, .circular {
   position: absolute;
   top: 100%;
   left: 50%;
-  z-index: 11;
   padding-top: 0em;
   border: none;
   border-radius: 50%;
@@ -164,7 +163,6 @@ circular, .circular {
   position: absolute;
   top: 100%;
   left: 50%;
-  z-index: 10;
   border-radius: 50%;
   background: transparent;
   opacity: 0;
